--- a/MDP6/app/src/main/res/layout/arena_fragment.xml
+++ b/MDP6/app/src/main/res/layout/arena_fragment.xml
@@ -129,7 +129,8 @@
         android:layout_marginEnd="11dp"
         android:layout_marginRight="0dp"
         android:text="explore"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:background="@android:color/holo_green_light"/>
 
     <Button
         android:id="@+id/fastest_path_button"
@@ -141,7 +142,8 @@
         android:layout_marginTop="11dp"
         android:layout_marginEnd="11dp"
         android:layout_marginRight="0dp"
-        android:text="fastest path" />
+        android:text="fastest path"
+        android:background="@android:color/holo_blue_light"/>
 
     <Button
         android:id="@+id/save_map_button"
@@ -218,7 +220,8 @@
         android:layout_marginEnd="10dp"
         android:layout_marginRight="0dp"
         android:text="place waypoint"
-        android:enabled="true"/>
+        android:enabled="true"
+        android:background="@android:color/holo_orange_light" />
 
     <Button
         android:id="@+id/place_startpoint_button"
@@ -231,7 +234,8 @@
         android:layout_marginEnd="10dp"
         android:layout_marginRight="0dp"
         android:text="place startpoint"
-        android:enabled="true"/>
+        android:enabled="true"
+        android:background="@android:color/holo_purple"/>
 
     <Button
         android:id="@+id/stop_button"
